TreeWalker.previousSibling()  / nextSibling() does not behave according to the specification https://bugs.webkit.org/show_bug.cgi?id=149493

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline existing W3C DOM test now that more checks are passing.

* web-platform-tests/dom/traversal/TreeWalker-expected.txt:

Source/WebCore:

TreeWalker.previousSibling()  / nextSibling() does not behave according
to the specification:
- https://dom.spec.whatwg.org/#dom-treewalker-nextsibling
- https://dom.spec.whatwg.org/#dom-treewalker-previoussibling
- https://dom.spec.whatwg.org/#concept-traverse-siblings

In particular, the previous code would fail to update 'node' variable
in the case acceptNode() returned FILTER_REJECT. This patch fixes this
and refactors the function to match more closely the text of the spec
and avoid code duplication.

No new tests, already covered by existing test.

* dom/TreeWalker.cpp:
(WebCore::TreeWalker::traverseSiblings):
(WebCore::TreeWalker::previousSibling):
(WebCore::TreeWalker::nextSibling):
(WebCore::TreeWalker::previousNode): Deleted.
* dom/TreeWalker.h:


Canonical link: https://commits.webkit.org/167612@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190187 268f45cc-cd09-0410-ab3c-d52691b4dbfc